<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/lg"
    >

        <TextView
            android:id="@+id/signup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="75dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/sign_up_title"
            android:textSize="35sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signup_username"
            android:layout_below="@id/signup_title"
            android:drawableStart="@drawable/baseline_person_24"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:autofillHints="username"
            style="@style/FormInputStyle"
            />

        <EditText
            android:id="@+id/signup_email"
            android:layout_below="@id/signup_username"
            android:drawableStart="@drawable/baseline_email_24"
            android:hint="@string/email"
            android:layout_marginTop="@dimen/lg"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            style="@style/FormInputStyle"
            />

        <EditText
            android:id="@+id/signup_password"
            android:layout_below="@id/signup_email"
            android:drawableStart="@drawable/baseline_lock_24"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/lg"
            android:inputType="textPassword"
            android:autofillHints="password"
            style="@style/FormInputStyle"
            />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_password"
            android:layout_marginTop="@dimen/lg"
            android:text="@string/register"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/red_900"
            android:paddingVertical="@dimen/lg"
            android:paddingHorizontal="@dimen/xl"
            android:onClick="onRegisterClick"
            />

        <TextView
            android:id="@+id/or"
            android:layout_marginTop="@dimen/md"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            android:layout_below="@id/register_button"/>

        <TextView
            android:id="@+id/continue_as_guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/or"
            android:layout_centerHorizontal="true"
            android:text="@string/continue_as_guest"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/red_900"
            android:onClick="onContinueAsGuestInLoginClick" />

</RelativeLayout>