<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/lg"
    >

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="75dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/login_title"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_email"
        android:layout_below="@id/login_title"
        android:drawableStart="@drawable/baseline_email_24"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        style="@style/FormInputStyle"
        />

    <EditText
        android:id="@+id/login_password"
        android:layout_below="@id/login_email"
        android:drawableStart="@drawable/baseline_lock_24"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/lg"
        android:inputType="textPassword"
        android:autofillHints="password"
        style="@style/FormInputStyle"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password"
        android:layout_marginTop="@dimen/lg"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/red_900"
        android:paddingVertical="@dimen/lg"
        android:paddingHorizontal="@dimen/xl"
        android:onClick="onLoginClick"
        />

</RelativeLayout>